# vt

./: .gitignore  .taplo.toml  Cargo.toml  LICENSE  README.md  debug.sh  install.sh  justfile
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  release.yml
crates/vt-common/: Cargo.toml
crates/vt-common/src/: lib.rs
crates/vt-common/src/youtube/: channels.rs  internal.rs  mod.rs  videos.rs
crates/vt-config/: Cargo.toml
crates/vt-config/src/: channel.rs  utils.rs
crates/vt-tui/: Cargo.toml
crates/vt-tui/src/: app.rs  entry.rs
crates/vt_common/: Cargo.toml
crates/vt_common/src/: constants.rs  headers.rs  http.rs  lib.rs  utils.rs  xml.rs  youtube.rs
crates/vt_common/src/youtube/: channels.rs  internal.rs  mod.rs  videos.rs
crates/vt_config/: Cargo.toml
crates/vt_config/src/: config.rs  constants.rs  lib.rs  secrets.rs  utils.rs
crates/vt_tui/: Cargo.toml
crates/vt_tui/src/: lib.rs
crates/vt_ui/: Cargo.toml
crates/vt_ui/src/: app.rs  lib.rs  ui.rs
src/: app.rs  config.rs  main.rs
src/commands/: check.rs  complete.rs  get.rs  list.rs  mod.rs  tui.rs  ui.rs  update.rs
src/commands/channel/: _move.rs  add.rs  cli.rs  create.rs  delete.rs  info.rs  list.rs  ls.rs  mod.rs  mv.rs  remove.rs  rename.rs  rm.rs  set.rs
src/commands/config/: apikey.rs  cli.rs  find.rs  mod.rs  show.rs
src/commands/groups/: add.rs  check.rs  cli.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  remove.rs  rename.rs
src/commands/holodex/: cli.rs  get.rs  mod.rs  org.rs
src/commands/internal/: utils.rs
src/commands/list/: add.rs  cli.rs  create.rs  get.rs  mod.rs  rm.rs  set.rs
src/commands/lists/: add.rs  cli.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  remove.rs
src/commands/org/: add.rs  cli.rs  list.rs
src/commands/video/: check.rs  cli.rs  mod.rs
src/internal/: display.rs  headers.rs  holodex.rs  mod.rs  programs.rs  utils.rs  youtube.rs
