[package]
authors    = ["killbasa <contact@killbasa.com>"]
edition    = "2021"
license    = "MIT"
name       = "vt"
repository = "https://github.com/killbasa/vt"
version    = "1.3.7"

[profile.release]
codegen-units = 1
lto           = true
strip         = "symbols"

[dependencies]
anyhow          = "1.0.95"
chrono          = "0.4.39"
chrono-humanize = "0.2.3"
clap            = { version = "4.5.26", features = ["derive"] }
clap_complete   = "4.5.42"
colored         = "3.0.0"
confy           = "0.6.1"
const_format    = "0.2.34"
once_cell       = "1.20.1"
reqwest         = { version = "0.12.12", features = ["blocking", "json"] }
roxmltree       = "0.20.0"
rpassword       = "7.3.1"
serde           = { version = "1.0.217", features = ["derive"] }
serde_json      = "1.0.135"
