[workspace]
members = ["crates/*"]

[package]
name    = "vt"
version = "2.0.0"

authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow          = { workspace = true }
chrono          = { workspace = true }
chrono-humanize = { workspace = true }
clap            = { workspace = true, features = ["derive"] }
clap_complete   = { workspace = true }
colored         = { workspace = true }
inquire         = { workspace = true }
rpassword       = { workspace = true }
self_update     = { workspace = true }
serde_json      = { workspace = true }
vt-common       = { workspace = true }
vt-config       = { workspace = true }
vt-tui          = { workspace = true }

[profile.release]
codegen-units = 1
debug         = false
lto           = "fat"
opt-level     = 3
strip         = "symbols"

[profile.release-debug]
debug    = true
inherits = "release"

[workspace.package]
authors    = ["killbasa <contact@killbasa.com>"]
edition    = "2024"
license    = "MIT"
repository = "https://github.com/killbasa/vt"

[workspace.dependencies]
vt-common = { version = "0.1.0", path = "./crates/vt-common" }
vt-config = { version = "0.1.0", path = "./crates/vt-config" }
vt-tui    = { version = "0.1.0", path = "./crates/vt-tui" }

anyhow          = "1.0.97"
chrono          = "0.4.40"
chrono-humanize = "0.2.3"
clap            = { version = "4.5.34", features = ["derive"] }
clap_complete   = "4.5.47"
colored         = "3.0.0"
confy           = "0.6.1"
const_format    = "0.2.34"
crossterm       = "0.29.0"
inquire         = { version = "0.7.5", default-features = false, features = ["crossterm"] }
once_cell       = "1.21.2"
ratatui         = "0.29.0"
regex           = "1.11.1"
reqwest         = { version = "0.12.15", features = ["blocking", "json"] }
roxmltree       = "0.20.0"
rpassword       = "7.3.1"
self_update     = "0.42.0"
serde           = { version = "1.0.219", features = ["derive"] }
serde_json      = "1.0.140"
