[package]
name    = "vt-config"
publish = false
version = "0.1.0"

authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow       = { workspace = true }
confy        = { workspace = true }
const_format = { workspace = true }
once_cell    = { workspace = true }
serde        = { workspace = true, features = ["derive"] }
