[package]
name    = "vt-tui"
publish = false
version = "0.1.0"

authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[lib]
name = "vt_tui"
path = "src/lib.rs"

[[bin]]
name = "vt-tui"
path = "src/entry.rs"

[dependencies]
anyhow    = { workspace = true }
crossterm = { workspace = true }
ratatui   = { workspace = true }
vt-config = { workspace = true }
