[package]
name    = "vt_common"
publish = false
version = "0.1.0"

authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow    = { workspace = true }
reqwest   = { workspace = true, features = ["blocking", "json"] }
roxmltree = { workspace = true }
serde     = { workspace = true, features = ["derive"] }
